--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 <body>
     <h1>Group Members</h1>
     <p>Member 1: Andrea Laserna</p>
-    <p>Member 2: </p>
+    <p>Member 2: Marinelle Joan Tambolero</p>
     <p>Member 3: </p>
 </body>
 </html>
