--- a/about.html
+++ b/about.html
@@ -7,6 +7,6 @@
     <h1>Group Members</h1>
     <p>Member 1: Andrea Laserna</p>
     <p>Member 2: Marinelle Joan Tambolero</p>
-    <p>Member 3: </p>
+    <p>Member 3: Michaela Borces</p>
 </body>
 </html>
