--- a/homepage.html
+++ b/homepage.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Study Corner</title>
-  <link rel="stylesheet" href="homepage.css">
+  <link rel="stylesheet" href="homepageStyle.css">
 </head>
 <body>
   <header>
