timer js initialized

--- a/timer.html
+++ b/timer.html
@@ -14,15 +14,15 @@
             <p class="author">by: Webbers</p>
         </div>
     </header>
-        <div class="timer-container">
-            <!-- Study Quote API -->
-            <p class="quotes">Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
-            <!-- Timer -->
-            <div class="timer">25:00</div>
-            <button class="start">Start</button>
-            <!--Current Task Display  -->
-            <div class="current-task">Insert Task Here</div>
-        </div>
+    <div class="timer-container">
+        <!-- Study Quote API -->
+        <p class="quotes">Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+        <!-- Timer -->
+        <div class="timer">25:00</div>
+        <button class="start" id="start-timer">Start</button>
+        <!--Current Task Display  -->
+        <div class="current-task">Insert Task Here</div>
     </div>
+    <script src="timeScript.js"></script>
 </body>
 </html>
