pause button working

--- a/timer.html
+++ b/timer.html
@@ -19,7 +19,7 @@
         <p class="quotes">Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
         <!-- Timer -->
         <div class="timer">25:00</div>
-        <button class="start" id="start-timer">Start</button>
+        <button class="start-button" id="start-timer">Start</button>
         <!--Current Task Display  -->
         <div class="current-task">Insert Task Here</div>
     </div>
