studycorner.sql uploaded and spotify embedded

--- a/timer.html
+++ b/timer.html
@@ -23,6 +23,9 @@
         <!--Current Task Display  -->
         <div class="current-task">Insert Task Here</div>
     </div>
+    <div class="music" id="music">
+        <img src="images/music-library-2-svgrepo-com(1).svg">
+    </div>
     <script src="timeScript.js"></script>
 </body>
 </html>
