--- a/homepage.html
+++ b/homepage.html
@@ -13,13 +13,13 @@
 
   <div class="welcome-mssg">
     <h1 id="mssg">Hello, [username]!</h1>
-    <p id="quote">"Lorem ipsum dolor sit amet consectetur adipisicing elit."</p>
+    <p id="quote"></p>
   </div>
 
   <div class="container">
     <div class="main-navi">
       <div class="card-section">
-        <div id="nav-timer">Timer</div>
+        <div id="nav-timer">Timer</div> 
         <div id="nav-tasks">Tasks</div>
         <div id="nav-statistics">Statistics</div>
       </div>
@@ -42,5 +42,6 @@
       </div>
     </div>
   </div>
+  <script src="fetch.js"></script>
 </body>
 </html>
