--- a/timer.html
+++ b/timer.html
@@ -12,7 +12,14 @@
             <h1 id="title">Study Corner</h1>
             <p class="author">by: Webbers</p>
         </div>
+        <div class="navBar">
+            <a class="navigation" id="homepage" href="homepage.php">Home</a>
+            <a class="navigation" href="timer.html" id="timer">Timer</a>
+            <a class="navigation" href="tasks_management.html" id="tasks">Tasks</a>
+            <a class="navigation" href="calendar.html" id="stats">Statistics</a>
+        </div>
     </header>
+
     <div class="timer-container">
         <!-- Study Quote API -->
         <p class="quotes">Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
