--- a/tasks_management.html
+++ b/tasks_management.html
@@ -5,19 +5,6 @@
   <title>Study Corner: Tasks</title>
   <link rel="stylesheet" href="tasksStyle.css">
 </head>
-<div id="taskForm" class="form">
-  <div class="pop-up">
-    <span id="closePopUp" class="close">×</span>
-    <h2>Add Task</h2>
-    <label for="taskName">Task Name:</label>
-    <input type="text" id="taskName" placeholder="Task Name" required />
-    <span id="nameError" class="error"></span><br>
-    <label for="dueDate">Due Date:</label>
-    <input type="date" id="dueDate" required />
-    <button id="saveTask">Add Task</button>
-  </div>
-</div>
-
 <body>
   <header>
     <div class="header-left">
@@ -25,11 +12,11 @@
       <h2 id="authors">by: Webbers</h2>
     </div>
     <div class="navBar">
-		  <a class="navigation" id="homepage" href="homepage.html">Home</a>
-		  <a class="navigation" href="timer.html" id="timer">Timer</a>
-	    <a class="navigation" href="tasks_management.html" id="tasks">Tasks</a>
+      <a class="navigation" id="homepage" href="homepage.html">Home</a>
+      <a class="navigation" href="timer.html" id="timer">Timer</a>
+      <a class="navigation" href="tasks_management.html" id="tasks">Tasks</a>
       <a class="navigation" href="satistics.html" id="stats">Statistics</a>
-	  </div>
+    </div>
   </header>
 
   <div class="categories">
@@ -54,6 +41,20 @@
       </div>
     </div>
   </div>
+
+  <form id="addTaskForm" method="post" class="form">
+    <div class="pop-up">
+      <span id="closePopUp" class="close">×</span>
+      <h2>Add Task</h2>
+      <label for="taskName">Task Name:</label>
+      <input type="text" name="title" id="taskName" placeholder="Task Name" required />
+      <span id="nameError" class="error"></span><br>
+      <label for="dueDate">Due Date:</label>
+      <input type="date" name="deadline" id="dueDate" required />
+      <button type="submit" id="saveTask">Add Task</button>
+    </div>
+  </form>
+
   <!--<div class="event-container"></div>-->
   <script src="taskScript.js"></script>
 
