--- a/tasks_management.html
+++ b/tasks_management.html
@@ -12,10 +12,10 @@
       <h2 id="authors">by: Webbers</h2>
     </div>
     <div class="navBar">
-      <a class="navigation" id="homepage" href="homepage.html">Home</a>
+      <a class="navigation" id="homepage" href="homepage.php">Home</a>
       <a class="navigation" href="timer.html" id="timer">Timer</a>
       <a class="navigation" href="tasks_management.html" id="tasks">Tasks</a>
-      <a class="navigation" href="satistics.html" id="stats">Statistics</a>
+      <a class="navigation" href="calendar.html" id="stats">Statistics</a>
     </div>
   </header>
 
