implemented edit delete and task status change ft.

--- a/calendar.html
+++ b/calendar.html
@@ -6,11 +6,23 @@
 	<meta name="viewport"
 		content="width=device-width, 
 				initial-scale=1.0">
-	<link rel="stylesheet" href="./style.css">
+	<link rel="stylesheet" href="style.css">
 	<title>Study Calendar</title>
 </head>
 
 <body>
+	<header>
+		<div class="header-left">
+		<h1 id="title">Study Corner</h1>
+		<h2 id="authors">by: Webbers</h2>
+		</div>
+		<div class="navBar">
+		<a class="navigation" id="homepage" href="homepage.php">Home</a>
+		<a class="navigation" href="timer.html" id="timer">Timer</a>
+		<a class="navigation" href="tasks_management.html" id="tasks">Tasks</a>
+		<a class="navigation" href="calendar.php" id="stats">Statistics</a>
+		</div>
+  	</header>
 	<!-- Main wrapper for the calendar application -->
 	<div class="wrapper">
 		<div class="container-calendar">
