--- a/tasks_management.html
+++ b/tasks_management.html
@@ -15,26 +15,26 @@
       <a class="navigation" id="homepage" href="homepage.php">Home</a>
       <a class="navigation" href="timer.html" id="timer">Timer</a>
       <a class="navigation" href="tasks_management.html" id="tasks">Tasks</a>
-      <a class="navigation" href="calendar.html" id="stats">Statistics</a>
+      <a class="navigation" href="calendar.php" id="stats">Statistics</a>
     </div>
   </header>
 
   <div class="categories">
-    <div class="status pending">
+    <div class="status pending" data-status="Pending">
       <div class="title">Pending</div>
       <div class="list-container">
         <div class="task-card add-task">+ Add Task</div>
       </div>
     </div>
 
-    <div class="status ongoing">
+    <div class="status ongoing" data-status="On Going">
       <div class="title">On Going</div>
       <div class="list-container">
         <div class="task-card add-task">+ Add Task</div>
       </div>
     </div>
 
-    <div class="status done">
+    <div class="status done" data-status="Done">
       <div class="title">Done</div>
       <div class="list-container">
         <div class="task-card add-task">+ Add Task</div>
