changes in homepage and fixed task manager

--- a/tasks_management.html
+++ b/tasks_management.html
@@ -20,21 +20,21 @@
   </header>
 
   <div class="categories">
-    <div class="status pending" data-status="Pending">
+    <div class="status pending">
       <div class="title">Pending</div>
       <div class="list-container">
         <div class="task-card add-task">+ Add Task</div>
       </div>
     </div>
 
-    <div class="status ongoing" data-status="On Going">
+    <div class="status ongoing">
       <div class="title">On Going</div>
       <div class="list-container">
         <div class="task-card add-task">+ Add Task</div>
       </div>
     </div>
 
-    <div class="status done" data-status="Done">
+    <div class="status done">
       <div class="title">Done</div>
       <div class="list-container">
         <div class="task-card add-task">+ Add Task</div>
