--- a/timer.html
+++ b/timer.html
@@ -16,7 +16,7 @@
             <a class="navigation" id="homepage" href="homepage.php">Home</a>
             <a class="navigation" href="timer.html" id="timer">Timer</a>
             <a class="navigation" href="tasks_management.html" id="tasks">Tasks</a>
-            <a class="navigation" href="calendar.html" id="stats">Statistics</a>
+            <a class="navigation" href="calendar.php" id="stats">Statistics</a>
         </div>
     </header>
 
