api quote in timer

--- a/timer.html
+++ b/timer.html
@@ -22,7 +22,9 @@
 
     <div class="timer-container">
         <!-- Study Quote API -->
-        <p class="quotes">Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+        <div class="quote-container">
+            <p id="quote"></p>
+        </div>
         <!-- Timer -->
         <div class="timer">00:30</div>
         <button class="start-button" id="start-timer">Start</button>
@@ -32,6 +34,8 @@
     <div class="music" id="music">
         <img src="images/music-library-2-svgrepo-com(1).svg">
     </div>
+
+    <script src="fetch.js"></script>
     <script src="timeScript.js"></script>
 </body>
 </html>
