newUser updated with insert uid

--- a/account.html
+++ b/account.html
@@ -17,7 +17,7 @@
                 <h1 id="open">Login your Account</h1>
                 <form id= "loginForm">
                     <input type="email" name = "email" id="email" placeholder="name@example.com"/>
-                    <input type="password" name = "pwd" id="pwd" placeholder="enter password"/>
+                    <input type="password" name = "pwd" id="password" placeholder="enter password"/>
                     <button type="submit">Continue</button>   
                 </form>
             </div>
